fixed flip card, and hover message spacing

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgba(88, 129, 87, 1);
     height: 100%;
+    display: grid;
 }
 
 .navigation_bar {
@@ -23,7 +24,7 @@ a {
 
 p {
     color: rgba(255, 255, 255, 1);
-    font-size: 11.9em;
+    font-size: 1em;
 }
 
 button {
@@ -34,15 +35,6 @@ button {
 
 button:hover {
     background-color: aliceblue;
-    cursor: wait;
-}
-
-.cardContainer {
-    display: grid;
-    margin: 4em 0em 0em 0em;
-    height: auto;
-    width: 100%;
-    justify-content: center;
 }
 
 .card {
@@ -50,14 +42,14 @@ button:hover {
     background-color: rgba(58, 90, 64, 1);
     width: 16em;
     border-radius: 5px;
-    padding: 10px;
+    padding: 8px;
     box-shadow: 6px 4px 5px rgba(218, 215, 205, 1);
 }
 
 .showHiddenText {
     display: flex;
     justify-content: center;
-    margin: 20px;
+    margin: 0px;
 }
 
 .showHiddenText span {
@@ -67,6 +59,7 @@ button:hover {
 
 .hidden {
     display: none;
+    margin: 15px;
 }
 
 .showHiddenText:hover + .hidden {
@@ -78,13 +71,51 @@ button:hover {
     justify-content: center;
 }
 
-.cardPhoto {
-    height: 20em;
-    width: 16em;
-
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 350px;
+    perspective: 1000px;
+    justify-self: center;
+    margin: 15px 0px 0px;
 }
 
-.card1 + span {
-    font-size: 1em;
-    color: rgba(218, 215, 205, 1);
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+    background-color: rgba(163, 177, 138, 1);
+    color: white;
+    transform: rotateY(180deg);
 }
